samples/cicd/fortio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-12444
  labels:
    app: fortio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: fortio/fortio
        command: [ 'fortio', 'load', '-t', '-1s', '-qps', "16", '-json', '/shared/fortiooutput.json', '-H', 'Host: iter8-app.example.com', "http://169.61.184.245" ]
