samples/cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iter8-app
  labels:
    app: iter8-app
    service: iter8-app
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: iter8-app
